--- a/.env_dev
+++ b/.env_dev
@@ -4,3 +4,8 @@ export STATIC_FILES_ADMINDASH_PORT=5002
 export DOMAIN_OVERRIDE=localhost:5000
 export PORT=5000
 STRIPE_SECRET_KEY=sk_test_NFBDEThkpHCYBzXPJuBlY8TW
+export DATABASE_URL=postgres://polisserver:polis@localhost/polisserver
+export DATABASE_FOR_READS_NAME=DATABASE_URL
+export MONGOLAB_URI=mongodb://localhost/polisserver
+export INTERCOM_APP_ID=
+export INTERCOM_ACCESS_TOKEN=
