Fix for the fix ;)
Signed-off-by: Tallys Martins <tallysmartins@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "polis =====",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./scripts/start.sh"
   },
   "engines": {
     "node": "6.9.1",
