--- a/config/env/dev.env
+++ b/config/env/dev.env
@@ -1,11 +1,15 @@
+
 export STATIC_FILES_HOST=localhost
 export STATIC_FILES_PORT=5001
 export STATIC_FILES_ADMINDASH_PORT=5002
 export DOMAIN_OVERRIDE=localhost:5000
 export PORT=5000
-STRIPE_SECRET_KEY=sk_test_NFBDEThkpHCYBzXPJuBlY8TW
-export DATABASE_URL=postgres://polisserver:polis@localhost/polisserver
+export STRIPE_SECRET_KEY=sk_test_NFBDEThkpHCYBzXPJuBlY8TW
+export DATABASE_URL=postgres://polis:polis@postgres:5432/polisdb
 export DATABASE_FOR_READS_NAME=DATABASE_URL
 export MONGOLAB_URI=mongodb://localhost/polisserver
 export INTERCOM_APP_ID=
 export INTERCOM_ACCESS_TOKEN=
+export INTERCOM_APP_ID=z9nyuv1g
+export INTERCOM_ACCESS_TOKEN=b2cc10a21d86785ade3bb02fa77e97bdaf0acb84
+
