Creating evironment variables files

--- a/env/postgres.env
+++ b/env/postgres.env
@@ -1,3 +1,5 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+PGUSER=polis
+PGPASSWORD=polis
+PGDATABASE=polisdb
+DATABASE_URL=postgres://polis:polis@polis-postgres:5432/polisdb
+DATABASE_FOR_READS_NAME=DATABASE_URL
