--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,20 @@
-version: '2'
+version: '3.1'
 
 services:
   polis-postgres:
     container_name: polis-postgres
-    image: "postgres:9.6"
+    build:
+      context: .
+      dockerfile: Dockerfile.postgres
+    volumes:
+      - .:/polisServer
+      - ./postgres/data:/var/lib/postgresql/data
     ports:
       - 5431:5432
-    build:
-      dockerfile: Dockerfile.postgres
-    env_file:
-      - env/postgres.env
+    environment:
+      - USER_PG=polis
+      - PASSWORD_PG=polis
+      - DB_PG=polisdb
 
   polis-server:
     container_name: polis-server
@@ -20,11 +25,6 @@ services:
       - 5000:5000
     depends_on:
       - polis-postgres
-    external_links:
-      - polisserver_default
     env_file:
       - env/postgres.env
       - env/docker.env
-    networks:
-      - default
-      - polisserver_default
