--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "underscore": "1.8.3",
     "valid-url": "1.0.9",
     "winston": "1.0.2"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.106.0"
   }
 }
