add debug flag on rancher cli

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ deploy to production:
   stage: deploy
   image: cdrx/rancher-gitlab-deploy
   script:
-    - upgrade --environment Production --stack polis-prod --service polis-server --new-image $RELEASE_IMAGE --no-finish-upgrade
+    - upgrade --environment Production --stack polis-prod --service polis-server --new-image $RELEASE_IMAGE --no-finish-upgrade --debug
   only:
     - /master/
   environment: production
@@ -43,7 +43,7 @@ deploy to development:
   stage: deploy
   image: cdrx/rancher-gitlab-deploy
   script:
-    - upgrade --environment Production --stack polis-dev --service polis-server --new-image $RELEASE_IMAGE --no-finish-upgrade
+    - upgrade --environment Production --stack polis-dev --service polis-server --new-image $RELEASE_IMAGE --no-finish-upgrade --debug
   only:
     - /develop/
   environment: development
