create separated variables for debug, devMode and polisProd. debug: enables loging (info level) devMode: original variable devMode, set proxy, url, pool size polisProd: encapsulate especific pol.is deploy stuff

--- a/config/env/dev.env
+++ b/config/env/dev.env
@@ -1,5 +1,13 @@
 # if more than one database, increase pool size                       - server.js:730
 
+# original variable devMode, set proxy, url, pool size and several other stuffs
+export DEV_MODE=true
+# enables loging (info level for now)
+export DEBUG=true
+# Encapsulate especific pol.is deploy stuff. Keep it false if you are not from
+# pol.is inc or it's not gonna work at all!
+export POLIS_PROD=false
+
 # default database for postgres
 export DATABASE_URL=postgres://polis:polis@postgres:5432/polisdb
 export DATABASE_FOR_READS_NAME=DATABASE_URL
@@ -50,10 +58,12 @@ export MATH_ENV=dev
 #export EXPORT_SERVER_AUTH_USERNAME
 #export EXPORT_SERVER_AUTH_PASS
 #export SERVICE_MATHAPI_HOSTNAME
-#
-## server url used when not dev mode
-#export PRIMARY_POLIS_URL=pol.br
-#
+
+# Server url used when not dev mode
+# Besides the variable name URL, this value must not include https:// part,
+# and in production, it is always https (see liines 5121, 5106 in sever.js)
+#export PRIMARY_POLIS_URL=pol.is
+
 ## stripe service
 #export STRIPE_CLIENT_ID
 #
