--- a/env/docker.env
+++ b/env/docker.env
@@ -1,5 +1,14 @@
 DOMAIN_OVERRIDE=localhost:5000
 
+# original variable devMode, set proxy, url, pool size and several other stuffs
+DEV_MODE=true
+# enables loging (info level for now)
+DEBUG=true
+# Must be true only if running in *.pol.is domains. Encapsulate especific
+# pol.is deploy stuff. Keep it false if you are not from
+# pol.is inc or it's not gonna work at all!
+POLIS_PROD=false
+
 # Messaging service
 INTERCOM_ACCESS_TOKEN=b2cc10a21d86785ade3bb02fa77e97bdaf0acb84
 INTERCOM_APP_ID=z9nyuv1g
@@ -44,8 +53,10 @@ MATH_ENV=dev
 #EXPORT_SERVER_AUTH_PASS
 #SERVICE_MATHAPI_HOSTNAME
 #
-## server url used when not dev mode
-#PRIMARY_POLIS_URL=pol.br
+# Server url used when not dev mode
+# Besides the variable name URL, this value must not include https:// part,
+# and in production, it is always https (see liines 5121, 5106 in sever.js)
+#PRIMARY_POLIS_URL=pol.is
 #
 ## stripe service
 #STRIPE_CLIENT_ID
