twitter example env variables

--- a/config/env/dev.env
+++ b/config/env/dev.env
@@ -69,3 +69,7 @@ export MATH_ENV=dev
 #
 ## geocode google
 #export GOOGLE_API_KEY
+
+## twitter
+#export TWITTER_CONSUMER_KEY=your application consumer key
+#export TWITTER_CONSUMER_SECRET=your application secret
