--- a/env/docker.env
+++ b/env/docker.env
@@ -63,3 +63,6 @@ MATH_ENV=dev
 #
 ## geocode google
 #GOOGLE_API_KEY
+
+#TWITTER_CONSUMER_KEY=your application consumer key
+#TWITTER_CONSUMER_SECRET=your application secret
