create pg pool size variable

--- a/config/env/dev.env
+++ b/config/env/dev.env
@@ -12,6 +12,7 @@ export POLIS_PROD=false
 export DATABASE_URL=postgres://polis:polis@postgres:5432/polisdb
 export DATABASE_FOR_READS_NAME=DATABASE_URL
 export DOMAIN_OVERRIDE=localhost:5000
+export PG_POOL_SIZE=2
 
 # Messaging service
 export INTERCOM_ACCESS_TOKEN=
