--- a/env/docker.env
+++ b/env/docker.env
@@ -17,6 +17,8 @@ INTERCOM_APP_ID=z9nyuv1g
 PORT=5000
 STATIC_FILES_ADMINDASH_PORT=5002
 
+PG_POOL_SIZE=2
+
 # Static files in polis-admin react application
 STATIC_FILES_HOST=polis-participation
 STATIC_FILES_PORT=5001
